fixed img alignment for 320px width, pushed attribution to bottom of page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       .attribution {
         font-size: 11px;
         text-align: center;
+        margin-top: auto;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -43,16 +44,20 @@
 
       .preview-container {
         background-color: hsl(0, 0%, 100%);
+        margin: 0 20px;
         padding: 1.15em;
         border-radius: 25px;
         border: 2px solid black;
         display: flex;
+        -webkit-box-shadow: 10px 11px 0px 1px rgba(0, 0, 0, 1);
+        -moz-box-shadow: 10px 11px 0px 1px rgba(0, 0, 0, 1);
+        box-shadow: 10px 11px 0px 1px rgba(0, 0, 0, 1);
       }
 
       .inner-content {
         display: flex;
         flex-direction: column;
-        gap: 10px;
+        gap: 20px;
       }
 
       .tag {
