--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        margin: 0;
       }
 
       .preview-container {
         background-color: hsl(0, 0%, 100%);
-        margin: 0 20px;
+        margin: auto 1em;
         padding: 1.15em;
         border-radius: 25px;
         border: 2px solid black;
